first section structure

--- a/index.html
+++ b/index.html
@@ -10,11 +10,103 @@
 </head>
 <body>
     <header class="main-header">
-        <div class="container">
-            <h2>header</h2>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-6">
+                    <div class="main-header--logo">
+                        <img src="img/header-logo.png" alt="Banco de Leon Logo">
+                    </div>
+                </div>
+                <div class="col-6">
+                    <nav class="main-header--nav-menu">
+                        <ul>
+                            <li class="main-heder--nav-menu__item"><a href="#">Home</a></li>
+                            <li class="main-heder--nav-menu__item"><a href="#viajes">+ Viajes</a></li>
+                            <li class="main-heder--nav-menu__item"><a href="#servicios">+ Servicios VIP</a></li>
+                            <li class="main-heder--nav-menu__item"><a href="#protecciones">+ Protecciones</a></li>
+                            <li class="main-heder--nav-menu__item"><a href="#beneficios">+ Beneficios</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
     </header>
-    <h1>Hello worlds</h1>
+    <section id="home">
+        <div id="home-top">
+            <div class="container-fluid">
+                <div class="card-wrapper">
+                    <div class="card-wrapper--textbox">
+                        <div class="card-wrapper--texbox--group">
+                            <h3 class="card-wrapper--texbox--group__title">Disfruta el mundo de privilegios y
+                                experiencias priceless que te mereces</h3>
+                            <button class="card-wrapper--texbox--group__btn">Aplica hoy</button>
+                        </div>
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
+        <div id="home-bottom">
+            <div class="container-fluid">
+                <div class="bottom-text">
+                    <div class="bottom-text--img">
+                        <img src="img/cards.png" alt="">
+                    </div>
+                    <h2 class="bottom-text--title">Tus tarjetas Platinum y Black BHD León Mastercard</h2>
+                    <p class="bottom-text--text">te ofrecen increíbles ofertas y beneficios al viajar a tus lugares favoritos en Estados Unidos, Europa, Asia o cualquier lugar del mundo.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="cities">
+        <div id="cities-slider">
+            <div class="cities-slider--city">
+                <div class="cities-slider--city--top">
+                    <div class="container-fluid">
+                        <span class="cities-slider--city--top__icon"><img src="img/big-pin.png" alt=""></span>
+                        <h1 class="cities-slider--city--top__title">New York</h1>
+                    </div>
+                </div>
+                <div class="cities-slider--city--bottom">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-4">
+                                <div class="cities-slider--city--bottom__card">
+                                    <div class="card-icon"><img src="img/map.png" alt=""></div>
+                                    <div class="card-title">Priceless<br>Cities</div>
+                                    <div class="card-text">Disfruta experiencias exclusivas
+                                        en New York.</div>
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <div class="cities-slider--city--bottom__card">
+                                    <div class="card-icon"><img src="img/suitcase.png" alt=""></div>
+                                    <div class="card-title">Mastercard Traveler<br>
+                                        Rewards</div>
+                                    <div class="card-text">Recibe rembolsos automáticos por tus compras en New York.</div>
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <div class="cities-slider--city--bottom__card">
+                                    <div class="card-icon"><img src="img/pin.png" alt=""></div>
+                                    <div class="card-title">Loungekey<br></div>
+                                    <div class="card-text">Viaja siempre al mejor estilo VIP en New York.</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <div id="cities-footer">
+            <div class="container-fluid">
+                <div class="cities-fotter--logo">
+                    <img src="img/footer-logo.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- JS Scripts-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
