--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Add the slick-theme.css if you want default styling -->
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <!-- Add the slick-theme.css if you want default styling -->
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
+
     <link rel="stylesheet" href="/css/styles.css">
     <title>Banco BHD Leon</title>
 </head>
@@ -59,9 +64,124 @@
         </div>
     </section>
     <section id="cities">
-        <div id="cities-slider">
+        <div id="cities-slider" class="glider">
+            <!--New york-->
             <div class="cities-slider--city">
-                <div class="cities-slider--city--top">
+                <div class="cities-slider--city--top city--new-york">
+                    <div class="container-fluid">
+                        <span class="cities-slider--city--top__icon"><img src="img/big-pin.png" alt=""></span>
+                        <h1 class="cities-slider--city--top__title">New York</h1>
+                    </div>
+                </div>
+                <div class="cities-slider--city--bottom">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-4">
+                                <div class="cities-slider--city--bottom__card">
+                                    <div class="card-icon"><img src="img/map.png" alt=""></div>
+                                    <div class="card-title">Priceless<br>Cities</div>
+                                    <div class="card-text">Disfruta experiencias exclusivas
+                                        en New York.</div>
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <div class="cities-slider--city--bottom__card">
+                                    <div class="card-icon"><img src="img/suitcase.png" alt=""></div>
+                                    <div class="card-title">Mastercard Traveler<br>
+                                        Rewards</div>
+                                    <div class="card-text">Recibe rembolsos automáticos por tus compras en New York.</div>
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <div class="cities-slider--city--bottom__card">
+                                    <div class="card-icon"><img src="img/pin.png" alt=""></div>
+                                    <div class="card-title">Loungekey<br></div>
+                                    <div class="card-text">Viaja siempre al mejor estilo VIP en New York.</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Miami -->
+            <div class="cities-slider--city">
+                <div class="cities-slider--city--top city--miami">
+                    <div class="container-fluid">
+                        <span class="cities-slider--city--top__icon"><img src="img/big-pin.png" alt=""></span>
+                        <h1 class="cities-slider--city--top__title">Miami</h1>
+                    </div>
+                </div>
+                <div class="cities-slider--city--bottom">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-4">
+                                <div class="cities-slider--city--bottom__card">
+                                    <div class="card-icon"><img src="img/map.png" alt=""></div>
+                                    <div class="card-title">Priceless<br>Cities</div>
+                                    <div class="card-text">Disfruta experiencias exclusivas
+                                        en New York.</div>
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <div class="cities-slider--city--bottom__card">
+                                    <div class="card-icon"><img src="img/suitcase.png" alt=""></div>
+                                    <div class="card-title">Mastercard Traveler<br>
+                                        Rewards</div>
+                                    <div class="card-text">Recibe rembolsos automáticos por tus compras en New York.</div>
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <div class="cities-slider--city--bottom__card">
+                                    <div class="card-icon"><img src="img/pin.png" alt=""></div>
+                                    <div class="card-title">Loungekey<br></div>
+                                    <div class="card-text">Viaja siempre al mejor estilo VIP en New York.</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Madrid-->
+            <div class="cities-slider--city">
+                <div class="cities-slider--city--top city--madrid">
+                    <div class="container-fluid">
+                        <span class="cities-slider--city--top__icon"><img src="img/big-pin.png" alt=""></span>
+                        <h1 class="cities-slider--city--top__title">New York</h1>
+                    </div>
+                </div>
+                <div class="cities-slider--city--bottom">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-4">
+                                <div class="cities-slider--city--bottom__card">
+                                    <div class="card-icon"><img src="img/map.png" alt=""></div>
+                                    <div class="card-title">Priceless<br>Cities</div>
+                                    <div class="card-text">Disfruta experiencias exclusivas
+                                        en New York.</div>
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <div class="cities-slider--city--bottom__card">
+                                    <div class="card-icon"><img src="img/suitcase.png" alt=""></div>
+                                    <div class="card-title">Mastercard Traveler<br>
+                                        Rewards</div>
+                                    <div class="card-text">Recibe rembolsos automáticos por tus compras en New York.</div>
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <div class="cities-slider--city--bottom__card">
+                                    <div class="card-icon"><img src="img/pin.png" alt=""></div>
+                                    <div class="card-title">Loungekey<br></div>
+                                    <div class="card-text">Viaja siempre al mejor estilo VIP en New York.</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--Others-->
+            <div class="cities-slider--city">
+                <div class="cities-slider--city--top city--others">
                     <div class="container-fluid">
                         <span class="cities-slider--city--top__icon"><img src="img/big-pin.png" alt=""></span>
                         <h1 class="cities-slider--city--top__title">New York</h1>
@@ -99,15 +219,61 @@
             </div>
 
         </div>
-        <div id="cities-footer">
+    </section>
+    <section id="travel">
+        <div id="travel--top">
             <div class="container-fluid">
-                <div class="cities-fotter--logo">
-                    <img src="img/footer-logo.png" alt="">
+                <div class="travel-banner">
+                    <div class="travel-banner--box">
+                        <div class="travel-banner--box--group">
+                            <h3 class="travel-banner--box--gropup__title">Viajes VIP Inolvidables</h3>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+        <div id="travel--mid">
+            <div class="container-fluid">
+                <div class="travel-panel">
+                    <div class="row">
+                        <div class="col-4">
+                            <div class="travel-panel--icon">
+                                <img src="" alt="">
+                            </div>
+                        </div>
+                        <div class="col-8">
+                            <div class="travel-panel--info">
+                                <h4 class="travel-panel--info__title">BHD León Viajes.</h4>
+                                <h5 class="travel-panel--info__text">Esta es la forma más conveniente de redimir las Estrellas BHD León que acumulaste con Mastercard Black para que hagas el viaje que te mereces.</h5>
+                                <div class="collapse" id="collapseExample">
+                                    <div class="card card-body">
+                                        Nuestro Centro de Asistencia Local de Viajes realizará los trámites de canje de Estrellas BHD León para planificar el viaje que deseas y comprar pasajes en la línea aérea de tu preferencia sin restricciones de fechas. También puedes realizar excursiones y reservación de hoteles locales e internacionales, cruceros, eventos y mucho más.
+                                    </div>
+                                </div>
+                                <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                                    Button with data-bs-target
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="travel--bottom"></div>
     </section>
+    <footer id="footer">
+        <div class="container-fluid">
+            <div class="cities-fotter--logo">
+                <img src="img/footer-logo.png" alt="">
+            </div>
+        </div>
+    </footer>
     <!-- JS Scripts-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous" ></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+
+    <script src="/js/app.js"></script>
+
 </body>
 </html>
