applying detailed styles

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="col-6">
                     <nav class="main-header--nav-menu">
                         <ul>
-                            <li class="main-heder--nav-menu__item"><a href="#">Home</a></li>
+                            <li class="main-heder--nav-menu__item"><a href="#home">Home</a></li>
                             <li class="main-heder--nav-menu__item"><a href="#travel">+ Viajes</a></li>
                             <li class="main-heder--nav-menu__item"><a href="#services">+ Servicios VIP</a></li>
                             <li class="main-heder--nav-menu__item"><a href="#protection">+ Protecciones</a></li>
@@ -226,7 +226,7 @@
                 <div class="travel-banner">
                     <div class="travel-banner--box">
                         <div class="travel-banner--box--group">
-                            <h3 class="travel-banner--box--gropup__title">Viajes VIP Inolvidables</h3>
+                            <h3 class="travel-banner--box--group__title">Viajes VIP<br>Inolvidables</h3>
                         </div>
                     </div>
                 </div>
@@ -236,22 +236,22 @@
             <div class="container-fluid">
                 <div class="travel-panel">
                     <div class="row">
-                        <div class="col-4">
+                        <div class="col-3">
                             <div class="travel-panel--icon">
                                 <img src="img/mountain.png" alt="">
                             </div>
                         </div>
-                        <div class="col-8">
+                        <div class="col-9">
                             <div class="travel-panel--info">
                                 <h4 class="travel-panel--info__title">BHD León Viajes.</h4>
                                 <h5 class="travel-panel--info__text">Esta es la forma más conveniente de redimir las Estrellas BHD León que acumulaste con Mastercard Black para que hagas el viaje que te mereces.</h5>
                                 <div class="collapse" id="collapseExample">
-                                    <div class="card card-body">
+                                    <span>
                                         Nuestro Centro de Asistencia Local de Viajes realizará los trámites de canje de Estrellas BHD León para planificar el viaje que deseas y comprar pasajes en la línea aérea de tu preferencia sin restricciones de fechas. También puedes realizar excursiones y reservación de hoteles locales e internacionales, cruceros, eventos y mucho más.
-                                    </div>
+                                    </span>>
                                 </div>
-                                <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                                    arrow
+                                <button  type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                                    <img src="img/up-arrow.png" alt="">
                                 </button>
                             </div>
                         </div>
@@ -259,22 +259,22 @@
                 </div>
                 <div class="travel-panel">
                     <div class="row">
-                        <div class="col-4">
+                        <div class="col-3">
                             <div class="travel-panel--icon">
                                 <img src="img/airplane.png" alt="">
                             </div>
                         </div>
-                        <div class="col-8">
+                        <div class="col-9">
                             <div class="travel-panel--info">
                                 <h4 class="travel-panel--info__title">Before Boarding.</h4>
                                 <h5 class="travel-panel--info__text">Tu Tarjeta Mastercard Black te ofrece los servicios exclusivos de Before Boarding en el Aeropuerto Internacional de Las Américas (AILA) y Aeropuerto Internacional El Cibao (STI).</h5>
-                                <div class="collapse" id="collapseExample">
-                                    <div class="card card-body">
+                                <div class="collapse" id="before">
+                                    <span>
                                         Nuestro Centro de Asistencia Local de Viajes realizará los trámites de canje de Estrellas BHD León para planificar el viaje que deseas y comprar pasajes en la línea aérea de tu preferencia sin restricciones de fechas. También puedes realizar excursiones y reservación de hoteles locales e internacionales, cruceros, eventos y mucho más.
-                                    </div>
+                                    </span>
                                 </div>
-                                <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                                    arrow
+                                <button  type="button" data-bs-toggle="collapse" data-bs-target="#before" aria-expanded="false" aria-controls="collapseExample">
+                                    <img src="img/up-arrow.png" alt="">
                                 </button>
                             </div>
                         </div>
@@ -286,22 +286,22 @@
             <div class="container-fluid">
                 <div class="travel-panel">
                     <div class="row">
-                        <div class="col-4">
+                        <div class="col-3">
                             <div class="travel-panel--icon">
                                 <img src="img/wifi.png" alt="">
                             </div>
                         </div>
-                        <div class="col-8">
+                        <div class="col-9">
                             <div class="travel-panel--info">
                                 <h4 class="travel-panel--info__title">BHD León Viajes.</h4>
                                 <h5 class="travel-panel--info__text">Esta es la forma más conveniente de redimir las Estrellas BHD León que acumulaste con Mastercard Black para que hagas el viaje que te mereces.</h5>
-                                <div class="collapse" id="collapseExample">
-                                    <div class="card card-body">
+                                <div class="collapse" id="bhd">
+                                    <span>
                                         Nuestro Centro de Asistencia Local de Viajes realizará los trámites de canje de Estrellas BHD León para planificar el viaje que deseas y comprar pasajes en la línea aérea de tu preferencia sin restricciones de fechas. También puedes realizar excursiones y reservación de hoteles locales e internacionales, cruceros, eventos y mucho más.
-                                    </div>
+                                    </span>
                                 </div>
-                                <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                                    arrow
+                                <button type="button" data-bs-toggle="collapse" data-bs-target="#bhd" aria-expanded="false" aria-controls="collapseExample">
+                                    <img src="img/up-arrow-white.png" alt="">
                                 </button>
                             </div>
                         </div>
@@ -309,22 +309,22 @@
                 </div>
                 <div class="travel-panel">
                     <div class="row">
-                        <div class="col-4">
+                        <div class="col-3">
                             <div class="travel-panel--icon">
                                 <img src="img/stairs.png" alt="">
                             </div>
                         </div>
-                        <div class="col-8">
+                        <div class="col-9">
                             <div class="travel-panel--info">
                                 <h4 class="travel-panel--info__title">Before Boarding.</h4>
                                 <h5 class="travel-panel--info__text">Tu Tarjeta Mastercard Black te ofrece los servicios exclusivos de Before Boarding en el Aeropuerto Internacional de Las Américas (AILA) y Aeropuerto Internacional El Cibao (STI).</h5>
-                                <div class="collapse" id="collapseExample">
-                                    <div class="card card-body">
+                                <div class="collapse" id="stairs">
+                                    <span >
                                         Nuestro Centro de Asistencia Local de Viajes realizará los trámites de canje de Estrellas BHD León para planificar el viaje que deseas y comprar pasajes en la línea aérea de tu preferencia sin restricciones de fechas. También puedes realizar excursiones y reservación de hoteles locales e internacionales, cruceros, eventos y mucho más.
-                                    </div>
+                                    </span>
                                 </div>
-                                <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                                    arrow
+                                <button type="button" data-bs-toggle="collapse" data-bs-target="#stairs" aria-expanded="false" aria-controls="collapseExample">
+                                    <img src="img/up-arrow-white.png" alt="">
                                 </button>
                             </div>
                         </div>
