--- a/index.html
+++ b/index.html
@@ -69,8 +69,14 @@
             <div class="cities-slider--city">
                 <div class="cities-slider--city--top city--new-york">
                     <div class="container-fluid">
-                        <span class="cities-slider--city--top__icon"><img src="img/big-pin.png" alt=""></span>
-                        <h1 class="cities-slider--city--top__title">New York</h1>
+                        <div class="cities-wrapper">
+                            <span class="cities-slider--city--top__icon"><img src="img/big-pin.png" alt=""></span>
+                            <h1 class="cities-slider--city--top__title">New York</h1>
+                        </div>
+                        <div class="cities-slider--arrows">
+                            <img src="img/arrow-left.png" alt="" class="arrow arrow-left">
+                            <img src="img/arrow-right.png" alt="" class="arrow arrow-right">
+                        </div>
                     </div>
                 </div>
                 <div class="cities-slider--city--bottom">
@@ -78,27 +84,84 @@
                         <div class="row">
                             <div class="col-4">
                                 <div class="cities-slider--city--bottom__card">
-                                    <div class="card-icon"><img src="img/map.png" alt=""></div>
-                                    <div class="card-title">Priceless<br>Cities</div>
-                                    <div class="card-text">Disfruta experiencias exclusivas
-                                        en New York.</div>
+                                    <div class="card-inner">
+                                        <div class="card-front-text">
+                                            <div class="card-icon"><img src="img/map.png" alt=""></div>
+                                            <div class="card-title">Priceless<br>Cities</div>
+                                            <div class="card-text">Disfruta experiencias exclusivas
+                                                en New York.</div>
+                                        </div>
+                                        <div class="card-back-text">
+                                            <div class="back-top">
+                                                <span class="name">Miami, Florida</span>
+                                                <h5 class="frace">Treat yoursel to a VIP ice cream party at MadLab</h5>
+                                            </div>
+                                            <div class="back-bottom">
+                                                <span class="name">Miami, Florida</span>
+                                                <h5 class="frace">Take a private curated tour of the Rubell Museum</h5>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-4">
                                 <div class="cities-slider--city--bottom__card">
-                                    <div class="card-icon"><img src="img/suitcase.png" alt=""></div>
-                                    <div class="card-title">Mastercard protectioner<br>
-                                        Rewards</div>
-                                    <div class="card-text">Recibe rembolsos automáticos por tus compras en New York.</div>
+                                    <div class="card-inner">
+                                        <div class="card-front-text">
+                                            <div class="card-icon"><img src="img/suitcase.png" alt=""></div>
+                                            <div class="card-title">Mastercard protectioner<br>
+                                                Rewards</div>
+                                            <div class="card-text">Recibe rembolsos automáticos por tus compras en New York.</div>
+                                        </div>
+                                        <div class="card-back-text">
+                                            <div class="back-top">
+                                                <span class="name">Estados Unidos</span>
+                                                <h5 class="frace">Bergdorf Goodman</h5>
+                                            </div>
+                                            <div class="back-bottom">
+                                                <span class="name">Estados Unidos</span>
+                                                <h5 class="frace">Mandarin Oriental, Miami</h5>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-4">
                                 <div class="cities-slider--city--bottom__card">
-                                    <div class="card-icon"><img src="img/pin.png" alt=""></div>
-                                    <div class="card-title">Loungekey<br></div>
-                                    <div class="card-text">Viaja siempre al mejor estilo VIP en New York.</div>
+                                    <div class="card-inner">
+                                        <div class="card-front-text">
+                                            <div class="card-icon"><img src="img/pin.png" alt=""></div>
+                                            <div class="card-title">Loungekey<br></div>
+                                            <div class="card-text">Viaja siempre al mejor estilo VIP en New York.</div>
+                                        </div>
+                                        <div class="card-back-text">
+                                            <div class="back-top last">
+                                                <span class="name">Estados Unidos</span>
+                                                <h5 class="frace">Central Terminal<br>Concourse E</h5>
+                                                <div class="furnature">
+                                                    <img src="img/furnature.png" alt="">
+                                                    <span class="room">Lounges</span>
+                                                </div>
+                                            </div>
+                                            <div class="back-bottom last">
+                                                <span class="name">Estados Unidos</span>
+                                                <h5 class="frace">Central Terminal<br>Concourse F</h5>
+                                                <div class="furnature">
+                                                    <img src="img/furnature.png" alt="">
+                                                    <span class="room">Lounges</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="cities-footer footer">
+                    <div class="container-fluid">
+                        <div class="cities-footer--logo">
+                            <img src="img/footer-logo.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -107,8 +170,14 @@
             <div class="cities-slider--city">
                 <div class="cities-slider--city--top city--miami">
                     <div class="container-fluid">
-                        <span class="cities-slider--city--top__icon"><img src="img/big-pin.png" alt=""></span>
-                        <h1 class="cities-slider--city--top__title">Miami</h1>
+                        <div class="cities-wrapper">
+                            <span class="cities-slider--city--top__icon"><img src="img/big-pin.png" alt=""></span>
+                            <h1 class="cities-slider--city--top__title">Miami</h1>
+                        </div>
+                        <div class="cities-slider--arrows">
+                            <img src="img/arrow-left.png" alt="" class="arrow arrow-left">
+                            <img src="img/arrow-right.png" alt="" class="arrow arrow-right">
+                        </div>
                     </div>
                 </div>
                 <div class="cities-slider--city--bottom">
@@ -145,8 +214,14 @@
             <div class="cities-slider--city">
                 <div class="cities-slider--city--top city--madrid">
                     <div class="container-fluid">
-                        <span class="cities-slider--city--top__icon"><img src="img/big-pin.png" alt=""></span>
-                        <h1 class="cities-slider--city--top__title">New York</h1>
+                        <div class="cities-wrapper">
+                            <span class="cities-slider--city--top__icon"><img src="img/big-pin.png" alt=""></span>
+                            <h1 class="cities-slider--city--top__title">Madrid</h1>
+                        </div>
+                        <div class="cities-slider--arrows">
+                            <img src="img/arrow-left.png" alt="" class="arrow arrow-left">
+                            <img src="img/arrow-right.png" alt="" class="arrow arrow-right">
+                        </div>
                     </div>
                 </div>
                 <div class="cities-slider--city--bottom">
@@ -183,8 +258,14 @@
             <div class="cities-slider--city">
                 <div class="cities-slider--city--top city--others">
                     <div class="container-fluid">
-                        <span class="cities-slider--city--top__icon"><img src="img/big-pin.png" alt=""></span>
-                        <h1 class="cities-slider--city--top__title">New York</h1>
+                        <div class="cities-wrapper">
+                            <span class="cities-slider--city--top__icon"><img src="img/big-pin.png" alt=""></span>
+                            <h1 class="cities-slider--city--top__title">Otras Ciudades</h1>
+                        </div>
+                        <div class="cities-slider--arrows">
+                            <img src="img/arrow-left.png" alt="" class="arrow arrow-left">
+                            <img src="img/arrow-right.png" alt="" class="arrow arrow-right">
+                        </div>
                     </div>
                 </div>
                 <div class="cities-slider--city--bottom">
@@ -217,7 +298,6 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </section>
     <section id="travel">
@@ -616,7 +696,7 @@ Alertas de Consumo Entérate al instante de tus movimientos, controla mejor tus 
             </div>
         </div>
     </section>
-    <footer id="footer">
+    <footer class="footer">
         <div class="container-fluid">
             <div class="cities-fotter--logo">
                 <img src="img/footer-logo.png" alt="">
